// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-partial-view-folder should delete an empty partial view folder 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-partial-view-folder should handle attempt to delete a non-empty partial view folder 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The folder is not empty and can therefore not be deleted.",
    "operationStatus": "NotEmpty",
    "status": 400,
    "title": "Not empty",
    "type": "Error",
  },
}
`;

exports[`delete-partial-view-folder should handle non-existent partial view folder 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "detail": "The specified folder was not found.",
    "operationStatus": "NotFound",
    "status": 404,
    "title": "Not found",
    "type": "Error",
  },
}
`;
